Patch grid misalignment bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ nav img {
     justify-content: flex-start;
 }
 
-.members, img,
+.members img,
 .activity img {
     margin-right: 1em;
 }
